crates/axiom-typeck/tests/fixtures/errors/if_without_else_not_unit.ax
fn main() { val x = if true { 1 } }
